# 2IC80-CMonsterco

./: .gitignore  Cargo.toml  README.md  populate.py
.github/workflows/: windows-msvc.yml
ransomware/: .gitignore  Cargo.toml  app.manifest  build.rs
ransomware/.cargo/: config.toml
ransomware/src/: debug.rs  lib.rs  main.rs
ransomware/src/cryptography/: chunk.rs  decrypt_parallel.rs  encrypt.rs  keys.rs  mod.rs  parallel_encrypt.rs
ransomware/src/gui/: bitcoin_confirmation.rs  mod.rs  payment.rs  warning.rs
ransomware/src/networking/: client.rs
server/: Cargo.toml
server/src/: main.rs
server/src/cryptography/: key_gen.rs  mod.rs
src/: main.rs
src/cryptography/: encrypt.rs
src/ransomware/: fileEncrypt.rs  mod.rs
