[package]
name = "wannacryaboutit_2ic80"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
anyhow = "1.0.100"
zeroize = "1.8.2"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
rand_core = "0.9.3"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
windows = { version = "0.62.2", features = ["Win32_UI_Shell"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.136"