[package]
name = "c_monster_co_2ic80"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
anyhow = "1.0.100"
zeroize = "1.8.2"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
rand_core = "0.9.3"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.136"
sodiumoxide = "0.2.7"
fs = "0.0.5"
num_cpus = "1.16"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
strip = true
lto = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[build-dependencies]
embed-resource = "2.4"

[profile.release]
strip = true
lto = true

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[[bin]]
name = "encrypt"
path = "src/bin/encrypt.rs"

[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"

[lib]
path = "src/lib.rs"
